- Added programatically execution

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         </div>
       </div>
     </nav>
-    <div class="wrapper">
+    <div class="js-wrapper">
       <div class="amp-wrapper">
         <img src="./assets/ampersand-transition.svg" alt="amp-logo" />
       </div>
       <div class="title-wrapper">
         <h1>We serve luxury brands</h1>
       </div>
-      <!-- <div class="content-wrapper">
+      <div class="content-wrapper">
         <div class="contents">
           <div class="content-left">
             <p>Luxury Brands &amp; High-Net-Worth Audiences</p>
@@ -54,7 +54,7 @@
             </p>
           </div>
         </div>
-      </div> -->
+      </div>
       <div class="scrolldown-wrapper">
         <div class="scrolldown-img">
           <img
@@ -87,34 +87,41 @@
 
     let currentScrollPosition = 0;
 
-    setTimeout(() => {
+    function animateLogo() {
       animFinish = true;
       logo.classList.add("animate-logo");
       if (currentScrollPosition === 0) {
         element.style.background = "transparent";
       }
       logoSvg.style = "fill:white";
-    }, "7690");
+    }
+
+    setTimeout(animateLogo, 5500);
+
+    function animateElem(wrapper, classes, duration) {
+      setTimeout(() => {
+        const elem = document.querySelector(wrapper);
+        elem.classList.add(classes);
+      }, duration);
+    }
 
     document.addEventListener("DOMContentLoaded", function () {
-      const videoWrapper = document.querySelector(".wrapper");
-      setTimeout(() => {
-        videoWrapper.classList.add("hero-anim-1");
-        console.log("ANIMATION 1");
-        setTimeout(() => {
-          videoWrapper.classList.add("hero-anim-2");
-          console.log("ANIMATION 2");
-          setTimeout(() => {
-            videoWrapper.classList.add("hero-anim-3");
-            console.log("ANIMATION 3");
-          }, "3450");
-        }, "3450");
-      }, "100");
+      const wrapper = ".js-wrapper";
+      animateElem(wrapper, "js-sd-anim-1", 300);
+      animateElem(wrapper, "js-amp-anim-1", 1000);
+      animateElem(wrapper, "js-bg-anim-1", 1500);
+      animateElem(wrapper, "js-title-anim-1", 2200);
+      animateElem(wrapper, "js-bg-anim-2", 3500);
+      animateElem(wrapper, "js-amp-anim-2", 3700);
+      animateElem(wrapper, "js-title-anim-2", 3500);
+      animateElem(wrapper, "js-content-anim-1", 3500);
+      animateElem(wrapper, "js-bg-anim-3", 5500);
+      animateElem(wrapper, "js-title-anim-3", 5500);
+      animateElem(wrapper, "js-content-anim-3", 5500);
     });
 
     window.addEventListener("scroll", function () {
       currentScrollPosition = window.pageYOffset;
-
       if (currentScrollPosition === 0 && animFinish) {
         element.style.background = "transparent";
         logoSvg.style = "fill:white";
