- Added brand clients section

--- a/index.html
+++ b/index.html
@@ -154,7 +154,226 @@
         ></iframe>
       </div>
     </div>
-    <div class="test"></div>
+    <section class="clients-space">
+      <div class="clients-space-wrapper">
+        <div class="clients-space-layout">
+          <div class="clients-content">
+            <h2 class="title">World Class Clients</h2>
+            <div class="desc">
+              We partner with some of the most prestigious global fashion,
+              jewelry, travel, and lifestyle brands
+            </div>
+            <div class="learn-more-btn">
+              <span class="hover-text"> view our clients </span>
+              <span class="default-text">
+                <span>view our </span>
+                <span class="last">clients</span>
+              </span>
+            </div>
+          </div>
+          <div class="clients-logos">
+            <div class="rows">
+              <div class="marquee-wrapper-left">
+                <div class="marquee">
+                  <div class="marquee-group">
+                    <a href="#" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-8.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="#" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-1-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-2-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-3-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-4-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-5-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-6-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-7-1.png"
+                        alt=""
+                      />
+                    </a>
+                  </div>
+                  <div class="marquee-group" aria-hidden="true">
+                    <a href="#" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-8.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="#" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-1-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-2-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-3-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-4-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-5-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-6-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-7-1.png"
+                        alt=""
+                      />
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="marquee-wrapper-right">
+                <div class="marquee">
+                  <div class="marquee-group">
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-22-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-23-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-24-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-25-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-26-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-27-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-28-1.png"
+                        alt=""
+                      />
+                    </a>
+                  </div>
+                  <div class="marquee-group" aria-hidden="true">
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-22-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-23-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-24-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-25-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-26-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-27-1.png"
+                        alt=""
+                      />
+                    </a>
+                    <a href="" class="marquee-item">
+                      <img
+                        src="https://www.northandwarren.com/app/uploads/2023/01/Logo-28-1.png"
+                        alt=""
+                      />
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
   <script>
     // navigation vars
